--- a/bio.html
+++ b/bio.html
@@ -14,12 +14,16 @@
         <main>
         
         <h1>i'm kelsie &amp;<br> I like to design.</h1>
-        
-            <p>But I guess that's not all that I do. <br></p>
             <div class="bio">
             <img src="images/me.jpg" alt="Picture of Me" class="mypic">
             <p>
-        Hello, my name is Kelsie Dustin. I'm currently a student at Brigham Young University—Idaho. I'm studying Graphic Design. I'm also studying a minor in Computer Information Technology, which means that <strong>this website was designed and developed all by myself.</strong> I'll be finishing my Bachelor's degree in the spring of 2020.<br><br>In the meantime I design a lot of stuff for my clients and for work. Though most of my graphic design work consists of typography, vector-based art, and web design, I work with several different mediums. <strong>I consider myself both a designer and an artist. </strong>Some of my more traditional work is used in my designs.<br><br>I'm always looking to learn more and for opportunities to share my work with others.</p>
+        Hello, my name is Kelsie Dustin. I'm currently a student at Brigham Young University—Idaho. 
+        I'm studying Graphic Design. I'm also studying a minor in Computer Information Technology, 
+        which means that <strong>this website was designed and developed all by myself.</strong> 
+        I'll be finishing my Bachelor's degree in the spring of 2020.<br><br>In the meantime I design a 
+        lot of stuff for my clients and for work. Though most of my graphic design work consists of 
+        typography, vector-based art, and web design, I work with several different mediums. <strong>
+            I consider myself both a designer and an artist. </strong>Some of my more traditional work is used in my designs.<br><br>I'm always looking to learn more and for opportunities to share my work with others.</p>
         </div>
 
 
