--- a/bio.html
+++ b/bio.html
@@ -18,12 +18,13 @@
             <img src="images/me.jpg" alt="Picture of Me" class="mypic">
             <p>
         Hello, my name is Kelsie Dustin. I'm currently a student at Brigham Young University—Idaho. 
-        I'm studying Graphic Design. I'm also studying a minor in Computer Information Technology, 
+        I'm studying Graphic Design with a minor in Computer Information Technology, 
         which means that <strong>this website was designed and developed all by myself.</strong> 
         I'll be finishing my Bachelor's degree in the spring of 2020.<br><br>In the meantime I design a 
-        lot of stuff for my clients and for work. Though most of my graphic design work consists of 
-        typography, vector-based art, and web design, I work with several different mediums. <strong>
-            I consider myself both a designer and an artist. </strong>Some of my more traditional work is used in my designs.<br><br>I'm always looking to learn more and for opportunities to share my work with others.</p>
+        lot of stuff for my clients and for work. I have a special interest in UI/UX design and web design.
+        <br>I am currently open to new opportunities including an internship and future positions in 
+        the design field.</p>
+            
         </div>
 
 
