--- a/bio.html
+++ b/bio.html
@@ -23,7 +23,7 @@
         I'll be finishing my Bachelor's degree in the spring of 2020.<br><br>In the meantime I design a 
         lot of stuff for my clients and for work. I have a special interest in UI/UX design and web design.
         <br>I am currently open to new opportunities including an internship and future positions in 
-        the design field.</p>
+        the design field.</p></div>
 
          <h1>connect with me</h1>
         
