--- a/bio.html
+++ b/bio.html
@@ -19,17 +19,14 @@
             <p>
         Hello, my name is Kelsie Dustin. I'm currently a student at Brigham Young University—Idaho. 
         I'm studying Graphic Design with a minor in Computer Information Technology, 
-        which means that <strong>this website was designed and developed all by myself.</strong> 
+        which means that this website was designed and developed myself. 
         I'll be finishing my Bachelor's degree in the spring of 2020.<br><br>In the meantime I design a 
         lot of stuff for my clients and for work. I have a special interest in UI/UX design and web design.
         <br>I am currently open to new opportunities including an internship and future positions in 
-        the design field.</p></div>
-
-         <h1>connect with me</h1>
-        
+        the design field.</p>
         <h3>kellodust@gmail.com</h3>
         <h3>406.596.0055</h3>
-        
+        </div>
 
         </main>
          <footer w3-include-html="footer.html">
