--- a/bio.html
+++ b/bio.html
@@ -16,7 +16,7 @@
         <h1>i'm kelsie &amp;<br> I like to design.</h1>
             <div class="bio">
             <img src="images/me.jpg" alt="Picture of Me" class="mypic">
-            <p>
+            <div><p>
         Hello, my name is Kelsie Dustin. I'm currently a student at Brigham Young University—Idaho. 
         I'm studying Graphic Design with a minor in Computer Information Technology, 
         which means that this website was designed and developed myself. 
@@ -26,7 +26,7 @@
         the design field.</p>
         <h3>kellodust@gmail.com</h3>
         <h3>406.596.0055</h3>
-        </div>
+        </div></div>
 
         </main>
          <footer w3-include-html="footer.html">
